# discord-music-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
src/: __main__.py  logger_config.py
src/api/: __init__.py  __main__.py
src/api/dependencies/: __init__.py  discovery_service.py  hyprctl_service.py  pactl_service.py  sink_manager.py
src/api/models/: audio_source.py  hyprctl.py  pactl.py
src/api/routes/: __init__.py  audio.py
src/bot/: __init__.py  __main__.py  client.py  exc.py  utils.py
src/bot/components/: __init__.py  paginated_view.py  search_view.py
src/bot/dependencies/: __init__.py  player.py  player_manager.py  recorder.py  ytdlp.py
src/bot/dependencies/queue/: __init__.py  base.py  in_memory.py
src/bot/models/: __init__.py  core.py
src/shared/: __init__.py
src/shared/dependencies/: __init__.py  virtual_sink.py
src/shared/models/: __init__.py  config.py
tests/: conftest.py
tests/integration/: conftest.py  test_discovery_service_integration.py  test_hyprctl_service_integration.py  test_pactl_service_integration.py  test_recorder_actually_records.py  test_recorder_integration.py  test_virtual_sink_integration.py  test_ytdlp_get_track_info.py
tests/unit/api/: test_app.py  test_routes.py
tests/unit/api/dependencies/: __init__.py  test_discovery_service.py  test_hyprctl_service.py  test_pactl_service.py
tests/unit/bot/: __init__.py  test_utils.py
tests/unit/bot/dependencies/: __init__.py  test_recorder.py
tests/unit/shared/: test_config.py  test_virtual_sink.py
