[project]
name = "loud_bot"
version = "0.1.0"
description = "LOUD stands for Local Output Uploaded to Discord"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "loguru>=0.7.3",
    "python-dotenv>=1.2.1",
]
licence = { text = "MIT" }

[tool.poe.tasks]
# Testing
test = "pytest"
test-watch = "pytest --watch"

# Linting and formatting
lint = "ruff check ."
lint-fix = "ruff check --fix ."
format = "ruff format ."
format-check = "ruff format --check ."

# Type checking
typecheck = "mypy loud_bot"

# Combined quality checks
check = ["format-check", "lint", "typecheck", "test"]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "poethepoet>=0.38.0",
    "ruff>=0.14.7",
]
test = [
    "pytest>=9.0.1",
]
